2014-10-24  Luke Kendall  <luke.kendall@cisra.canon.com.au>

	* ntsec.xml: More language and typo fixes.

2014-10-23  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml: Fix language.

2014-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in: Create install targets.
	(cygwin-ug-net/cygwin-ug-net.pdf): Create subdir to allow building PDF
	even if subdir is missing.
	(cygwin-api/cygwin-api.pdf): Ditto.
	* configure.ac: Add AC_PROG_INSTALL rule.
	* configure: Regenerate.
	* new-features.xml (ov-new1.7.33): Add installation of docs.

2014-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* posix.xml (std-gnu): Add ffsl, ffsll, quotactl.
	(std-notes): Add restrictions of quotactl.

2014-10-22  Yaakov Selkowitz  <yselkowi@redhat.com>

	* new-features.xml (ov-new1.7.33): Document stime.
	* posix.xml (std-deprec): Add stime.

2014-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.33): s/Linux/glibc.

2014-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.33): Update to current state.

2014-09-05  Corinna Vinschen  <corinna@vinschen.de>

	* pathnames.xml (cygdrive): Add /proc/cygdrive description.

2014-09-03  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (setfacl): Align documentation to help text in setfacl.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml (ntsec-common): Drop outdated comment about underdeveloped
	Solaris ACL API support.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (setfacl): Drop outdated note that default ACEs are not
	taken into account.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml: Disable description of db_prefix and db_separator settings.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (getfacl): Document additional suid/sgid/vtx flag printing.

2014-08-15  Corinna Vinschen  <corinna@vinschen.de>

	* configure.ac: Convert to new AC_INIT style.
	* configure: Regenerate.
